--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "20.6.2",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "aos": "^3.0.0-beta.6",
     "autoprefixer": "10.4.15",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
@@ -19,7 +20,14 @@
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.11.0",
+    "react-photo-album": "^2.3.0",
+    "react-scroll": "^1.8.9",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@types/aos": "^3.0.7",
+    "@types/react-scroll": "^1.8.7"
   }
 }
